# ticketing_system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CLAUDE.md  Dockerfile  Makefile  README.md  SCYLLA_SPEC.md  alembic.ini  bdd_config.yml  cdk.context.json  cdk.json  docker-compose.consumers.yml  docker-compose.db.yml  docker-compose.local.yml  docker-compose.yml  init-test-db.sql  postgresql.conf  pyproject.toml  pytest_marks_example.ini
.claude/: settings.json
.claude/commands/: git_replenish.md  primer.md
.github/workflows/: ci.yml
deployment/: Makefile  config.yml  deploy-all.sh  destroy-all.sh  start-all.sh  stop-all.sh
deployment/cdk/: README.md  app.py  cdk.json  requirements.txt
deployment/cdk/stacks/: __init__.py  api_gateway_stack.py  api_service_stack.py  aurora_stack.py  booking_service_stack.py  database_stack.py  ec2_kafka_stack.py  ec2_kvrocks_stack.py  ecs_base_stack.py  ecs_stack.py  kvrocks_stack.py  kvrocks_stack.py.backup  load_balancer_stack.py  loadtest_stack.py  msk_stack.py  rds_postgres_stack.py  reservation_consumer_stack.py  reservation_service_stack.py  scylla_stack.py  seat_reservation_service_stack.py  ticketing_consumer_stack.py  ticketing_ec2_stack.py  ticketing_service_stack.py  vpc_stack.py
deployment/kvrocks/: init-cluster.sh  kvrocks-cluster.conf  kvrocks-node1.conf  kvrocks-node2.conf  kvrocks-node3.conf  kvrocks-node4.conf  kvrocks.conf
deployment/nginx/: nginx.conf
deployment/script/: aurora_inspect.py  deploy-scylla.sh  ecr-push.sh  test-container-locally.sh
observability/: dashboards.yml  prometheus-config.yml  promtail-config.yml
prompt/: clarify-and-translate.md  discovery.md  formulation-rules.md  formulation.md
script/: clean_all.py  init-test-db.sql  kafka-jmx-metrics.sh  launch_all_consumers.py  reset_database.py  reset_kafka.py  reset_scylladb.py  seating_config.json  seating_config.py  seed_data.py  test_sse.py
script/go_client/: .gitignore  Dockerfile  Makefile  concurrent_loadtest.go  full_reserved_loadtest.go  full_reserved_spiketest.go  go.mod  main.go  reserved_loadtest.go  seating_config.json  types.go
script/k6/: load-test.js  run-with-report.sh  smoke-test.js  stress-test.js
script/k6/dev/: load-test.js  spike-test.js  stress-test.js
script/k6/lib/: booking.js
script/k6/local/: load-test.js  stress-test.js
script/k6/production/: load-test.js  spike-test.js  stress-test.js
script/monitor/: all_services.sh  ecs_realtime.sh
scripts/: clean_all.py  launch_all_consumers.py  reset_database.py  reset_kafka.py  seating_config.py  seed_data.py  start_separated_consumers.sh  test_sse.py  topic_monitor.py
spec/: AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_SPEC.md  AWS_OPERATIONS_GUIDE.md  CONSTITUTION.md  KAFKA_SPEC.md  KVROCKS_SPEC.md  LOAD_TEST_SPEC.md  METRICS_PLAN.md  RESERVATION_STRATEGY.md  SEAT_RESERVATION_SERVICE_SPEC.md  TEST_SPEC.md  TICKETING_SERVICE_SPEC.md
spec/domain/: BOOKING_SPEC.md  EVENT_TICKETING_SPEC.md  RESERVATION_0_OVERVIEW_SPEC.md  RESERVATION_1_RESERVATION_WORKFLOW_SPEC.md  RESERVATION_1_WORKFLOW_SPEC.md  RESERVATION_2_RELEASE_WORKFLOW_SPEC.md  RESERVATION_3_FIND_BEST_AVAILABLE_SEATS_SPEC.md  RESERVATION_SPEC.md  SOURCE_HOST_SPEC.md  SPEC_PATTERN.md  erm.dbml
spec/test/: BDD_PATTERNS.yaml  TDD_1_RED.md  TDD_2_GREEN.md  TDD_3_REFACTOR.md  test_specification.md
src/: main.py
src/booking/domain/: booking_aggregate.py  booking_command_repo.py  booking_domain_events.py  booking_entity.py  booking_events.py  (+5 more)
src/platform/: app_factory.py
src/seat_reservation/: __init__.py
src/shared/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  jwt_auth_service.py  logger_config.py  message_codec.py  mock_email_service.py  path.py  permissions.py  role_auth_service.py  unit_of_work.py
src/shared_infra/: __init__.py
src/shared_kernel/: __init__.py
test/: bdd_steps_loader.py  conftest.py  constants.py  event_test_constants.py  fixture_loader.py  kvrocks_test_client.py  loader.py  test_app.py  test_constants.py  test_main.py  util_constant.py
test/bdd_conftest/: __init__.py  given_step_conftest.py  shared_step_utils.py  sse_step_conftest.py  then_step_conftest.py  when_step_conftest.py
test/deployment/: __init__.py  conftest.py  test_aurora_stack.py  test_ecs_stack.py  test_kvrocks_connection_pool.py  test_kvrocks_stack.py  test_load_balancer.py  test_msk_stack.py  test_retry_and_dlq.py
test/e2e/: README.md  test_async_booking_flow.py
test/infrastructure/: __init__.py  test_kvrocks_connection_pool.py  test_load_balancer.py  test_retry_and_dlq.py
test/pytest_bdd_ng_example/: fixtures.py  given.py  then.py  when.py
test/shared/: given.py  then.py  utils.py
tests/: conftest.py  conftest_api.py  event_test_constants.py  test_user_api.py  test_user_api_async.py  util_constant.py
tests/features/: api_user_creation.feature  booking_cancellation.feature  booking_creation.feature  booking_list.feature  booking_payment.feature  booking_price_validation.feature  booking_state_transition.feature  event_creation.feature  event_delete.feature  event_list.feature  event_subsection_ticket_status.feature  event_tickets.feature  event_update.feature  event_with_subsection_tickets_list.feature  order_cancellation.feature  order_creation.feature  order_list.feature  order_payment.feature  order_price_validation.feature  order_state_transition.feature  product_creation.feature  product_delete.feature  product_list.feature  product_update.feature  pytest_bdd_ng.feature  simple_math.feature  ticket_creation.feature  ticket_list.feature  ticket_reserved.feature  ticket_status_transition.feature  user_creation.feature  user_login.feature  user_management.feature
tests/pytest_bdd_ng_example/: __init__.py  fixtures.py  given.py  then.py  when.py
tests/shared/: given.py  then.py  utils.py
tests/user/: test_user_creation.py
tests/websocket/: test_websocket_auth_logic.py  test_websocket_broadcast_service.py  test_websocket_connection_filtering.py  test_websocket_endpoint.py  test_websocket_heartbeat.py  test_websocket_simple.py
(+922 files in other folders)
